--- a/components/imagePicker/index.less
+++ b/components/imagePicker/index.less
@@ -4,6 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    border: 2px dashed @lightGrey;
 }
 .image-picker-frame {
     color: @darkGrey;
